--- a/src/cms/index.html
+++ b/src/cms/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Content Manager</title>
+  <title>Administrar Contenido</title>
+  <link rel="shortcut icon" href="/fcc.png">
   <!-- Include the stylesheets from your site here -->
   <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^0.3/dist/cms.css" />
   <!-- Include a CMS specific stylesheet here -->
