Update CMS and use it from cdn

--- a/src/cms/index.html
+++ b/src/cms/index.html
@@ -7,11 +7,13 @@
   <title>Administrar Contenido</title>
   <link rel="shortcut icon" href="/fcc.png">
   <!-- Include the stylesheets from your site here -->
-  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^0.3/dist/cms.css" />
+  <link rel="stylesheet" href="https://unpkg.com/netlify-cms/dist/cms.css" />
   <!-- Include a CMS specific stylesheet here -->
 
 </head>
 <body>
+
+  <script src="https://unpkg.com/netlify-cms/dist/cms.js"></script>
   <script src="/cms.js"></script>
 </body>
 </html>
